--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@
 dwh-db-volume
 ./source-db-volume
 source-db-volume
-
-./init/demo-big-20170815.sql
-init/demo-big-20170815.sql
+./init/*.sql
+/init/*.sql
